--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -8,28 +8,48 @@ body {
   font-weight: 800;
 }
 
+/*
 .small-para {
   font-size: 14px;
   font-weight: 800;
 }
+*/
 
 .para {
   font-size: 22px;
 }
 
+.small-para {
+  font-size: 14px;
+  font-weight: 800;
+}
+
+/* Added selectors */
+#confirm-button {
+  background: green;
+  color: white;
+  font-weight: bold;
+}
+/* wasn't really needed */
+#cancel-button {
+  background: white;
+  color: black;
+}
+
+/*
 .confirm {
   background: green;
   color: white;
   font-weight: bold;
 } 
-
+*/
 .button {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
+div.text .child {
   color: rgb(0, 0, 0);
   font-weight: 800;
   font-size: 14px;
