--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -5,11 +5,29 @@ body {
 img {
   width: 100px;
   height: 100px;
+  display: block;
+  margin: 0 auto;
+}
+
+.text {
+  text-align: center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
+  margin-bottom: 32px;
+}
+
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  gap: 52px;
+}
+
+.flex-item {
+  max-width: 200px;
 }
 
 /* do not edit this footer */
